CSP forms update. Completed error summary/ error handling

--- a/csp/app/scripts/components/contactDetails/tpl-contact-details.html
+++ b/csp/app/scripts/components/contactDetails/tpl-contact-details.html
@@ -1,40 +1,34 @@
 <div class="container-fluid">
     <ng-form name="contCtrl.contactForm">
         <div class="row">
-            <div class="col-md-3 form-group" ng-class="{'has-error':contCtrl.contactForm.salutation{{::contCtrl.fldId}}_{{::$id}}.$invalid}">
-                <label for="salutation{{::contCtrl.fldId}}_{{::$id}}" class="required">
+            <div class="col-md-3 form-group"
+                 ng-class="{'has-error':contCtrl.contactForm[contCtrl.salutationId].$invalid}">
+                <label for="{{::contCtrl.salutationId}}" class="required">
                     <span class="field-name">{{"SALUTATION"|translate}}</span>
                     <strong class="required"> {{"REQUIRED" |translate}}</strong>
-                    <select id="salutation{{::contCtrl.fldId}}_{{::$id}}" name="salutation{{::contCtrl.fldId}}_{{::$id}}" class="form-control" ng-blur="contCtrl.updateErrorSummary()"
+                    <select id="{{::contCtrl.salutationId}}" name="{{::contCtrl.salutationId}}" class="form-control"
                             data-ng-model="contCtrl.contactModel.salutation" ng-disabled="!contCtrl.isEditable"
                             ng-options="salut |translate for salut in contCtrl.salutationList" required>
                     </select>
-                    <strong id="salutation-error" class="error" ng-show="contCtrl.showError(contCtrl.contactForm.salutation{{::contCtrl.fldId}}_{{::$id}})">
-                      <span class="label label-danger" ng-messages="contCtrl.contactForm.salutation{{::contCtrl.fldId}}_{{::$id}}.$error">
-                          <span ng-message="required"><span translate="MSG_ERR_MAND"></span></span>
-                      </span>
-                    </strong>
+                    <cmp-error-message field-name="contCtrl.salutationId" form-ref="contCtrl.contactForm"
+                                       show-error="contCtrl.showErrors()"
+                                       error-types="contCtrl.requiredOnly"></cmp-error-message>
                 </label>
             </div>
         </div>
         <div class="row">
             <div class="col-md-5 form-group"
-                 ng-class="{'has-error':contCtrl.contactForm.firstName{{::contCtrl.fldId}}_{{::$id}}.$invalid}">
-                <label for="firstName{{::contCtrl.fldId}}_{{::$id}}" class="required">
+                 ng-class="{'has-error':contCtrl.contactForm[contCtrl.firstNameId].$invalid}">
+                <label for="{{::contCtrl.firstNameId}}" class="required">
                     <span class="field-name">{{'FIRSTNAME'|translate}}</span>
                     <strong class="required">{{"REQUIRED" |translate}}</strong>
-                    <input type="text" id="firstName{{::contCtrl.fldId}}_{{::$id}}"
+                    <input type="text" id="{{::contCtrl.firstNameId}}"
                            data-ng-model="contCtrl.contactModel.givenName"
-                           class="form-control full-width" name="firstName{{::contCtrl.fldId}}_{{::$id}}" maxlength="60"
-                           ng-blur="contCtrl.updateErrorSummary()"
+                           class="form-control full-width" name="{{::contCtrl.firstNameId}}" maxlength="60"
                            size="60" ng-readonly="!contCtrl.isEditable" required/>
-                    <strong id="firstName-error" class="error"
-                            ng-show="contCtrl.showError(contCtrl.contactForm.firstName{{::contCtrl.fldId}}_{{::$id}})">
-                        <span class="label label-danger"
-                              ng-messages="contCtrl.contactForm.firstName{{::contCtrl.fldId}}_{{::$id}}.$error">
-                            <span ng-message="required"><span translate="MSG_ERR_MAND"></span></span>
-                        </span>
-                    </strong>
+                    <cmp-error-message field-name="contCtrl.firstNameId" form-ref="contCtrl.contactForm"
+                                       show-error="contCtrl.showErrors()"
+                                       error-types="contCtrl.requiredOnly"></cmp-error-message>
                 </label>
             </div>
             <div class="col-md-2 form-group">
@@ -46,136 +40,102 @@
                 </label>
             </div>
             <div class="col-md-5 form-group"
-                 ng-class="{'has-error':contCtrl.contactForm.lastName{{::contCtrl.fldId}}_{{::$id}}.$invalid}">
-                <label for="lastName{{::contCtrl.fldId}}_{{::$id}}" class="required">
+                 ng-class="{'has-error':contCtrl.contactForm[contCtrl.lastNameId].$invalid}">
+                <label for="{{::contCtrl.lastNameId}}" class="required">
                     <span class="field-name">{{'LASTNAME'|translate}}</span>
                     <strong class="required">{{"REQUIRED" |translate}}</strong>
-                    <input type="text" id="lastName{{::contCtrl.fldId}}_{{::$id}}"
+                    <input type="text" id="{{::contCtrl.lastNameId}}"
                            data-ng-model="contCtrl.contactModel.surname"
-                           ng-readonly="!contCtrl.isEditable" ng-blur="contCtrl.updateErrorSummary()"
-                           class="form-control full-width" name="lastName{{::contCtrl.fldId}}_{{::$id}}" required
+                           ng-readonly="!contCtrl.isEditable"
+                           class="form-control full-width" name="{{::contCtrl.lastNameId}}" required
                            maxlength="60" size="60"/>
-                    <strong id="surname-error" class="error"
-                            ng-show="contCtrl.showError(contCtrl.contactForm.lastName{{::contCtrl.fldId}}_{{::$id}})">
-                        <span class="label label-danger"
-                              ng-messages="contCtrl.contactForm.lastName{{::contCtrl.fldId}}_{{::$id}}.$error">
-                            <span ng-message="required"><span translate="MSG_ERR_MAND"></span></span>
-                        </span>
-                    </strong>
+                    <cmp-error-message field-name="contCtrl.lastNameId" form-ref="contCtrl.contactForm"
+                                       show-error="contCtrl.showErrors()"
+                                       error-types="contCtrl.requiredOnly"></cmp-error-message>
                 </label>
             </div>
         </div>
         <div class="row">
             <div class="col-md-5 form-group"
-                 ng-class="{'has-error':contCtrl.contactForm.langCorrespond{{::contCtrl.fldId}}__{{::$id}}.$invalid}">
-                <label for="langCorrespond{{::contCtrl.fldId}}_{{::$id}}" class="required">
+                 ng-class="{'has-error':contCtrl.contactForm[contCtrl.langCorrespondId].$invalid}">
+                <label for="{{::contCtrl.langCorrespondId}}" class="required">
                     <span class="field-name">{{'LANGCORRESPOND'|translate}}</span>
                     <strong class="required">{{'REQUIRED' |translate}}</strong>
-                    <select id="langCorrespond{{::contCtrl.fldId}}_{{::$id}}"
-                            name="langCorrespond{{::contCtrl.fldId}}_{{::$id}}"
-                            data-ng-model="contCtrl.contactModel.language" ng-blur="contCtrl.updateErrorSummary()"
+                    <select id="{{::contCtrl.langCorrespondId}}" name="{{::contCtrl.langCorrespondId}}"
+                            data-ng-model="contCtrl.contactModel.language"
                             ng-options="langCorr |translate for langCorr in contCtrl.langList"
                             class="form-control" ng-disabled="!contCtrl.isEditable" required>
                     </select>
-                    <strong id="langCorresp-error" class="error"
-                            ng-show="contCtrl.showError(contCtrl.contactForm.langCorrespond{{::contCtrl.fldId}}_{{::$id}})">
-                        <span class="label label-danger"
-                              ng-messages="contCtrl.contactForm.langCorrespond{{::contCtrl.fldId}}_{{::$id}}.$error">
-                            <span ng-message="required"><span translate="MSG_ERR_MAND"></span></span>
-                        </span>
-                    </strong>
+                    <cmp-error-message field-name="contCtrl.langCorrespondId" form-ref="contCtrl.contactForm"
+                                       show-error="contCtrl.showErrors()"
+                                       error-types="contCtrl.requiredOnly"></cmp-error-message>
                 </label>
             </div>
             <div class="col-md-4 form-group"
-                 ng-class="{'has-error':contCtrl.contactForm.jobTitle{{::contCtrl.fldId}}_{{::$id}}.$invalid}">
-                <label for="jobTitle{{::contCtrl.fldId}}_{{::$id}}" class="required">
+                 ng-class="{'has-error':contCtrl.contactForm[contCtrl.jobTitleId].$invalid}">
+                <label for="{{::contCtrl.jobTitleId}}" class="required">
                     <span class="field-name">{{'JOBTITLE'|translate}}</span>
                     <strong class="required">{{'REQUIRED'|translate}}</strong>
-                    <input type="text" id="jobTitle{{::contCtrl.fldId}}_{{::$id}}"
-                           data-ng-model="contCtrl.contactModel.title"
-                           class="form-control full-width" name="jobTitle{{::contCtrl.fldId}}_{{::$id}}" required
-                           maxlength="40" size="40"
-                           ng-readonly="!contCtrl.isEditable" ng-blur="contCtrl.updateErrorSummary()"
+                    <input type="text" id="{{::contCtrl.jobTitleId}}"
+                           data-ng-model="contCtrl.contactModel.title" class="form-control full-width"
+                           name="{{::contCtrl.jobTitleId}}" maxlength="40" size="40" ng-readonly="!contCtrl.isEditable"
                            required/>
-                    <strong id="jobTitle-error" class="error"
-                            ng-show="contCtrl.showError(contCtrl.contactForm.jobTitle{{::contCtrl.fldId}}__{{::$id}})">
-                        <span class="label label-danger"
-                              ng-messages="contCtrl.contactForm.jobTitle{{::contCtrl.fldId}}_{{::$id}}.$error">
-                            <span ng-message="required"><span translate="MSG_ERR_MAND"></span></span>
-                        </span>
-                    </strong>
+                    <cmp-error-message field-name="contCtrl.jobTitleId" form-ref="contCtrl.contactForm"
+                                       show-error="contCtrl.showErrors()"
+                                       error-types="contCtrl.requiredOnly"></cmp-error-message>
                 </label>
-
             </div>
             <div class="col-md-3 form-group"
-                 ng-class="{'has-error':contCtrl.contactForm.fax_number{{::contCtrl.fldId}}_{{::$id}}.$invalid}">
-                <label for="fax_number{{::contCtrl.fldId}}_{{::$id}}" ng-class="{'required':contCtrl.faxMandatory}">
+                 ng-class="{'has-error':contCtrl.contactForm[contCtrl.faxId].$invalid}">
+                <label for="{{::contCtrl.faxId}}" ng-class="{'required':contCtrl.faxMandatory}">
                     <span class="field-name">{{'FAX_NUMBER'|translate}}</span>
                     <strong ng-if="contCtrl.faxMandatory" class="required">{{'REQUIRED'|translate}}</strong>
 
-                    <input type="text" id="fax_number{{::contCtrl.fldId}}_{{::$id}}"
-                           data-ng-model="contCtrl.contactModel.fax"
-                           ng-readonly="!contCtrl.isEditable" ng-required="contCtrl.faxMandatory"
-                           class="form-control full-width" name="fax_number{{::contCtrl.fldId}}_{{::$id}}"
-                           maxlength="25" size="25"/>
-                    <strong id="fax-error" class="error"
-                            ng-show="contCtrl.showError(contCtrl.contactForm.fax_number{{::contCtrl.fldId}}_{{::$id}})">
-                        <span class="label label-danger"
-                              ng-messages="contCtrl.contactForm.fax_number{{::contCtrl.fldId}}_{{::$id}}.$error">
-                            <span ng-message="required"><span translate="MSG_ERR_MAND"></span></span>
-                        </span>
-                    </strong>
+                    <input type="text" id="{{::contCtrl.faxId}}"
+                           data-ng-model="contCtrl.contactModel.fax" ng-readonly="!contCtrl.isEditable"
+                           ng-required="contCtrl.faxMandatory" class="form-control full-width"
+                           name="{{::contCtrl.faxId}}" maxlength="25" size="25"/>
+                    <cmp-error-message ng-if="contCtrl.faxMandatory" field-name="contCtrl.faxId"
+                                       form-ref="contCtrl.contactForm"
+                                       show-error="contCtrl.showErrors()"
+                                       error-types="contCtrl.requiredOnly"></cmp-error-message>
                 </label>
             </div>
         </div>
         <div class="row">
             <div class="col-md-3 form-group"
-                 ng-class="{'has-error':contCtrl.contactForm.phoneNumber{{::contCtrl.fldId}}_{{::$id}}.$invalid}">
-                <label for="phoneNumber{{::contCtrl.fldId}}_{{::$id}}" class="required">
+                 ng-class="{'has-error':contCtrl.contactForm[contCtrl.phoneNumberId].$invalid}">
+                <label for="{{::contCtrl.phoneNumberId}}" class="required">
                     <span class="field-name">{{'PHONENUMBER'|translate}}</span>
                     <strong class="required">{{"REQUIRED" |translate}}</strong>
-                    <input type="text" id="phoneNumber{{::contCtrl.fldId}}_{{::$id}}"
+                    <input type="text" id="{{::contCtrl.phoneNumberId}}"
                            data-ng-model="contCtrl.contactModel.phone"
-                           ng-blur="contCtrl.updateErrorSummary()"
-                           class="form-control full-width" name="phoneNumber{{::contCtrl.fldId}}_{{::$id}}" required
-                           maxlength="25"
-                           size="25" ng-readonly="!contCtrl.isEditable" ng-pattern="contCtrl.phoneReg"
+                           class="form-control full-width" name="{{::contCtrl.phoneNumberId}}"
+                           maxlength="25" size="25" ng-readonly="!contCtrl.isEditable" ng-pattern="contCtrl.phoneReg"
                            required/>
-                    <strong id="phoneNum-error" class="error"
-                            ng-show="contCtrl.showError(contCtrl.contactForm.phoneNumber{{::contCtrl.fldId}}_{{::$id}})">
-                        <span class="label label-danger"
-                              ng-messages="contCtrl.contactForm.phoneNumber{{::contCtrl.fldId}}_{{::$id}}.$error">
-                            <span ng-message="required"><span translate="MSG_ERR_MAND"></span></span>
-                             <span ng-message="pattern"><span translate="MSG_ERR_PHONE_FORMAT"></span></span>
-                        </span>
-                    </strong>
+                    <cmp-error-message field-name="contCtrl.phoneNumberId" form-ref="contCtrl.contactForm"
+                                       show-error="contCtrl.showErrors()"
+                                       error-types="contCtrl.phoneError"></cmp-error-message>
                 </label>
-
             </div>
             <div class="col-md-3 form-group">
-                <label for="phone-ext_{{::$id}}"><span class="field-name">{{'PHONE_EXT'|translate}}</span>
-                    <input type="text" id="phone-ext_{{::$id}}" data-ng-model="contCtrl.contactModel.phoneExt"
-                           ng-readonly="!contCtrl.isEditable" class="form-control" name="phoneExt" maxlength="10"/>
+                <label for="{{::contCtrl.phoneExtId}}"><span class="field-name">{{'PHONE_EXT'|translate}}</span>
+                    <input type="text" id="{{::contCtrl.phoneExtId}}" data-ng-model="contCtrl.contactModel.phoneExt"
+                           ng-readonly="!contCtrl.isEditable" class="form-control" name="{{::contCtrl.phoneExtId}}" maxlength="10"/>
                 </label>
             </div>
             <div class="col-md-6 form-group"
-                 ng-class="{'has-error':contCtrl.contactForm.contactEmail{{::contCtrl.fldId}}_{{::$id}}.$invalid}">
-                <label for="contactEmail{{::contCtrl.fldId}}_{{::$id}}" class="required">
+                 ng-class="{'has-error':contCtrl.contactForm[contCtrl.contactEmailId].$invalid}">
+                <label for="{{::contCtrl.contactEmailId}}" class="required">
                     <span class="field-name">{{'CONTACTEMAIL'|translate}}</span>
                     <strong class="required">{{"REQUIRED" |translate}}</strong>
-                    <input type="email" id="contactEmail{{::contCtrl.fldId}}_{{::$id}}"
+                    <input type="email" id="{{::contCtrl.contactEmailId}}"
                            data-ng-model="contCtrl.contactModel.email"
-                           ng-blur="contCtrl.updateErrorSummary()"
                            ng-readonly="!contCtrl.isEditable" maxlength="50" size="60"
-                           class="form-control full-width" name="contactEmail{{::contCtrl.fldId}}_{{::$id}}" required/>
-                    <strong id="contactEmail-error" class="error"
-                            ng-show="contCtrl.showError(contCtrl.contactForm.contactEmail{{::contCtrl.fldId}}_{{::$id}})">
-                        <span class="label label-danger"
-                              ng-messages="contCtrl.contactForm.contactEmail{{::contCtrl.fldId}}_{{::$id}}.$error">
-                            <span ng-message="required"><span translate="MSG_ERR_MAND"></span></span>
-                          <span ng-message="email"><span translate="MSG_ERR_EMAIL_FORMAT"></span></span>
-                        </span>
-                    </strong>
+                           class="form-control full-width" name="{{::contCtrl.contactEmailId}}" required/>
+                    <cmp-error-message field-name="contCtrl.contactEmailId" form-ref="contCtrl.contactForm"
+                                       show-error="contCtrl.showErrors()" error-types="contCtrl.emailError">
+                    </cmp-error-message>
                 </label>
             </div>
         </div>
