--- a/csp/app/scripts/components/addressDetails/tpl-address-details.html
+++ b/csp/app/scripts/components/addressDetails/tpl-address-details.html
@@ -1,48 +1,43 @@
 <div class="container-fluid">
     <ng-form name="adr.addressForm" novalidate>
         <div class="row">
-            <div class="form-group col-md-12" ng-class="{'has-error':adr.addressForm.street_{{::$id}}.$invalid}">
-                <label for="street_{{::$id}}" class="required full-width">
+            <div class="form-group col-md-12" ng-class="{'has-error':adr.addressForm[adr.streetId].$invalid}">
+                <label for="{{::adr.streetId}}" class="required full-width">
                     <span class="field-name">{{"STREET" |translate}}</span>
                     <strong class="required"> {{"REQUIRED" |translate}}</strong>
-                    <input type="text" class="form-control full-width" maxlength="120" id="street_{{::$id}}"
-                           name="street_{{::$id}}" ng-readonly="!adr.isEditable" ng-blur="adr.updateErrorSummary()"
+                    <input type="text" class="form-control full-width" maxlength="120" id="{{::adr.streetId}}"
+                           name="{{::adr.streetId}}" ng-readonly="!adr.isEditable"
                            data-ng-model="adr.addressModel.street" required/>
-                    <strong id="street-error" class="error" ng-show="adr.showError(adr.addressForm.street_{{::$id}})">
-                        <span class="label label-danger" ng-messages="adr.addressForm.street_{{::$id}}.$error">
-                            <span ng-message="required">{{'MSG_ERR_MAND'|translate}}</span>
-                        </span>
-                    </strong>
+                    <cmp-error-message field-name="adr.streetId" form-ref="adr.addressForm"
+                                       show-error="adr.showErrors()"error-types="adr.requiredOnly">
+                    </cmp-error-message>
                 </label>
             </div>
         </div>
         <div class="row">
-            <div class="form-group col-md-6" ng-class="{'has-error':adr.addressForm.city_{{::$id}}.$invalid}">
-                <label for="city_{{::$id}}" class="required full-width">
+            <div class="form-group col-md-6" ng-class="{'has-error':adr.addressForm[adr.cityId].$invalid}">
+                <label for="{{::adr.cityId}}" class="required full-width">
                     <span class="field-name">{{"CITY_TOWN" |translate}}</span>
                     <strong class="required"> {{"REQUIRED" |translate}} </strong>
-                    <input type="text" id="city_{{::$id}}" name="city_{{::$id}}" data-ng-model="adr.addressModel.city"
-                           class="form-control  full-width" maxlength="60"  ng-blur="adr.updateErrorSummary()"
+                    <input type="text" id="{{::adr.cityId}}" name="{{::adr.cityId}}" data-ng-model="adr.addressModel.city"
+                           class="form-control  full-width" maxlength="60"
                            ng-readonly="!adr.isEditable" required/>
-                    <strong id="city-error" class="error" ng-show="adr.showError(adr.addressForm.city_{{::$id}})">
-                        <span class="label label-danger" ng-messages="adr.addressForm.city_{{::$id}}.$error">
-                            <span ng-message="required">{{'MSG_ERR_MAND'|translate}}</span>
-                        </span>
-                    </strong>
+                    <cmp-error-message field-name="adr.cityId" form-ref="adr.addressForm"
+                                       show-error="adr.showErrors()"error-types="adr.requiredOnly">
+                    </cmp-error-message>
                 </label>
             </div>
             <div class="col-md-5 form-group">
-                <label for="country_{{::$id}}" class="required full-width">
+                <label for="{{::adr.countryId}}" class="required full-width">
                     <span class="field-name">{{"COUNTRY" |translate}}</span>
                     <strong class="required">{{"REQUIRED" |translate}}</strong>
 
                     <div class="rep-pad-top">
-                        <div class="rep-error" ng-class="{'has-error':adr.addressForm.country_{{::$id}}.$invalid}">
-                            <ui-select ng-model="adr.addressModel.country" id="country_{{::$id}}" name="country_{{::$id}}"
-                                       on-select="adr.countryChanged()" required
-                                       ng-disabled="!adr.isEditable" title="Choose a country"
+                        <div class="rep-error" ng-class="{'has-error':adr.addressForm[adr.countryId].$invalid}">
+                            <ui-select ng-model="adr.addressModel.country" id="{{::adr.countryId}}" name="{{::adr.countryId}}"
+                                       on-select="adr.countryChanged()" required ng-disabled="!adr.isEditable" title="{{'COUNTRY_CHOOSE'|translate}}"
                                        class="rep-selectize-font full-width">
-                                <ui-select-match placeholder="Select or Search for country"  id="country_match{{::$id}}"
+                                <ui-select-match placeholder="Select or Search for country" id="country_match{{::$id}}"
                                                  class="rep-selectize-font rep-selectize-dropdown form-control">
                                     {{$select.selected[adr.lang]}}
                                 </ui-select-match>
@@ -54,60 +49,52 @@
                             </ui-select>
                         </div>
                     </div>
-                    <strong id="countryName-error" class="error"
-                            ng-show="adr.showError(adr.addressForm.country_{{::$id}})">
-                            <span class="label label-danger" ng-messages="adr.addressForm.country_{{::$id}}.$error">
-                                <span ng-message="required"><span translate="MSG_ERR_MAND"></span></span>
-                            </span>
-                    </strong>
+                    <cmp-error-message field-name="adr.countryId" form-ref="adr.addressForm"
+                                       show-error="adr.showErrors()"error-types="adr.requiredOnly">
+                    </cmp-error-message>
                 </label>
             </div>
         </div>
         <div class="row">
             <div class="col-md-6">
                 <div class="form-group" ng-show="adr.hideProvinceText"
-                     ng-class="{'has-error':adr.addressForm.provinceList_{{::$id}}.$invalid}">
-                    <label for="provinceList_{{::$id}}" class="required">
+                     ng-class="{'has-error':adr.addressForm[adr.stateListId].$invalid}">
+                    <label for="{{::adr.stateListId}}" class="required">
                         <span class="field-name">{{adr.provListLabel |translate}}</span>
                         <strong class="required"> {{"REQUIRED" |translate}} </strong>
                         <select class="form-control full-width" data-ng-model="adr.addressModel.stateList"
-                                id="provinceList_{{::$id}}" name="provinceList_{{::$id}}"
+                                id="{{::adr.stateListId}}" name="{{::adr.stateListId}}"
                                 data-ng-options="province |translate for province in adr.provinces"
                                 ng-disabled="!adr.isEditable" ng-required="adr.hideProvinceText"></select>
-                        <strong id="provinceList-error" class="error"
-                                ng-show="adr.showError(adr.addressForm.provinceList_{{::$id}})">
-                        <span class="label label-danger" ng-messages="adr.addressForm.provinceList_{{::$id}}.$error">
-                            <span ng-message="required">{{'MSG_ERR_MAND'|translate}}</span>
-                        </span>
-                        </strong>
+
+                        <cmp-error-message field-name="adr.stateListId" form-ref="adr.addressForm"
+                                           show-error="adr.showErrors()"error-types="adr.requiredOnly">
+                        </cmp-error-message>
                     </label>
                 </div>
                 <div class="form-group " ng-show="adr.hideProvinceDdl"
-                     ng-class="{'has-error':adr.addressForm.provstate_{{::$id}}.$invalid}">
-                    <label for="stateText_{{::$id}}">{{"PROVSTATE" |translate}}</label>
-                    <input type="text" id="stateText_{{::$id}}" name="provstate_{{::$id}}"
+                     ng-class="{'has-error':adr.addressForm[adr.stateTextId].$invalid}">
+                    <label for="{{::adr.stateTextId}}">{{"PROVSTATE" |translate}}</label>
+                    <input type="text" id="{{::adr.stateTextId}}" name="{{::adr.stateTextId}}"
                            data-ng-model="adr.addressModel.stateText" class="form-control full-width" maxlength="40"
                            size="40" ng-readonly="!adr.isEditable"/>
                 </div>
             </div>
-            <div class="form-group col-md-6" ng-class="{'has-error':adr.addressForm.postal_{{::$id}}.$invalid}">
-                <label for="postal_{{::$id}}" ng-class="{required:adr.isPostalRequired}">
+            <div class="form-group col-md-6" ng-class="{'has-error':adr.addressForm[adr.postalId].$invalid}">
+                <label for="{{::adr.postalId}}" ng-class="{required:adr.isPostalRequired}">
                     <span class="field-name">{{adr.postalLabel |translate}}</span>
                     <strong ng-show="adr.isPostalRequired" class="required">{{"REQUIRED" |translate}} </strong>
-
-                    <input type="text" id="postal_{{::$id}}" name="postal_{{::$id}}" data-ng-model="adr.addressModel.postalCode"
+                    <input type="text" id="{{::adr.postalId}}" name="{{::adr.postalId}}"
+                           data-ng-model="adr.addressModel.postalCode"
                            class="form-control full-width" ng-maxlength="7" ng-required="adr.isPostalRequired"
-                           ng-change="adr.postalCodeChanged()" ng-model-options="adr.ngModelOptSetting"
-                           ng-blur=" adr.updateErrorSummary()"
+                           ng-change="adr.postalCodeChanged()"
                            maxlength="7" ng-pattern="adr.postalPattern" ng-readonly="!adr.isEditable"/>
-                    <strong id="postal-error" class="error" ng-show="adr.showError(adr.addressForm.postal_{{::$id}})">
-                            <span class="label label-danger" ng-messages="adr.addressForm.postal_{{::$id}}.$error">
-                            <span ng-message="required">{{'MSG_ERR_MAND'|translate}} </span>
-                            <span ng-message="pattern">{{adr.postalError |translate}} </span>
-                        </span>
-                    </strong>
+
+                    <cmp-error-message field-name="adr.postalId" form-ref="adr.addressForm"
+                                       show-error="adr.showErrors()"error-types="adr.postalErrorList">
+                    </cmp-error-message>
                 </label>
             </div>
         </div>
-</ng-form>
+    </ng-form>
 </div>
