--- a/csp/app/scripts/components/cspContactRecord/tpl-csp-applicant.html
+++ b/csp/app/scripts/components/cspContactRecord/tpl-csp-applicant.html
@@ -2,30 +2,33 @@
     <ng-form name="cspApplCtrl.applForm">
         <div>
             <div class="form-group col-md-12"
-                 ng-class="{'has-error':cspApplCtrl.applForm.applicant{{cspApplCtrl.type}}_{{::$id}}.$invalid}">
-                <label for="applicant{{cspApplCtrl.type}}_{{::$id}}" class="required">
+                 ng-class="{'has-error':cspApplCtrl.applForm[cspApplCtrl.applicantId].$invalid}">
+                <label for="{{::cspApplCtrl.applicantId}}" class="required">
                     <span class="field-name">{{cspApplCtrl.applicantTextAlias |translate}}</span>
                     <strong class="required"> {{"REQUIRED" |translate}} </strong>
-                    <input type="text" id="applicant{{cspApplCtrl.type}}_{{::$id}}"
-                           name="applicant{{cspApplCtrl.type}}_{{::$id}}"
+                    <input type="text" id="{{::cspApplCtrl.applicantId}}" name="{{::cspApplCtrl.applicantId}}"
                            data-ng-model="cspApplCtrl.model.applicantName" class="form-control" maxlength="80" size="80"
                            required/>
-                    <strong id="applicant-error" class="error"
-                            ng-show="cspApplCtrl.showError(cspApplCtrl.applForm.applicant{{cspApplCtrl.type}}_{{::$id}})">
-                             <span class="label label-danger"
-                                   ng-messages="cspApplCtrl.applForm.applicant{{cspApplCtrl.type}}_{{::$id}}.$error">
-                                 <span ng-message="required">{{'MSG_ERR_MAND'|translate}}</span>
-                             </span>
-                    </strong>
+
+                    <cmp-error-message field-name="cspApplCtrl.applicantId" form-ref="cspApplCtrl.applForm"
+                                       show-error="cspApplCtrl.showErrors()"
+                                       error-types="cspApplCtrl.requiredOnly"></cmp-error-message>
                 </label>
             </div>
         </div>
-        <cmp-contact-details is-amend="true" contact-record="cspApplCtrl.model.contact" fax-mandatory="true" field-suffix="cspApplCtrl.type"></cmp-contact-details>
-        <cmp-address-details is-amend="true" address-record="cspApplCtrl.model.address"></cmp-address-details>
-        <div class=" col-md-12" ng-class="{'has-error':cspApplCtrl.applForm.billingDifferent.$invalid}">
+        <cmp-contact-details is-amend="true" contact-record="cspApplCtrl.model.contact" fax-mandatory="true"
+                             show-errors="cspApplCtrl.showErrors()"
+                             field-suffix="cspApplCtrl.type" update-error-summary="cspApplCtrl.updateErrorSummary()">
+        </cmp-contact-details>
+        <cmp-address-details is-amend="true" address-record="cspApplCtrl.model.address"
+                             show-errors="cspApplCtrl.showErrors()"
+                             update-error-summary="cspApplCtrl.updateErrorSummary()"
+                             field-suffix="cspApplCtrl.type"></cmp-address-details>
+        <div class=" col-md-12">
             <div class="checkbox" ng-if="cspApplCtrl.model.role.applicant">
                 <label for="billingDifferent_{{$id}}">
-                    <input type="checkbox" ng-model="cspApplCtrl.model.isBillingDifferent" name="billingDifferent_{{$id}}"
+                    <input type="checkbox" ng-model="cspApplCtrl.model.isBillingDifferent"
+                           name="billingDifferent_{{$id}}"
                            ng-change="cspApplCtrl.setBilling()"
                            id="billingDifferent_{{$id}}"/>{{"BILLING_DIFFERENT"|translate}}
                 </label>
